--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <script>
 const devices = {
-    "320x568": "iphone5-family.jpg",
+    "320x568": "iphone-4.0@2x.jpg",
     "375x667": "iphone6-8-family.jpg",
     "414x736": "iphone6-8-plus-family.jpg",
     "375x812": "iphoneX-12mini-family.jpg",
