--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ const devices = {
     "390x844": "iphone12-14-family.jpg",
     "430x932": "iphone14plus-15-family.jpg",
     "393x852": "iphone14pro-family.jpg",
-    "430x932-pro": "iphone-6.7-pro-max@3.jpg",
+    "1290x2796": "iphone-6.7-pro-max@3.jpg",
     "402x874": "iphone16-family.jpg"
 };
 
