--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ const devices = {
     "414x736": "iphone6-8-plus-family.jpg",
     "375x812": "iphoneX-12mini-family.jpg",
     "390x844": "iphone12-14-family.jpg",
-    "430x932": "iphone14plus-15-family.jpg",
+    "430x932": "iphone-6.7@3x.jpg",
     "393x852": "iphone14pro-family.jpg",
     "1290x2796": "iphone-6.7-pro-max@3.jpg",
     "402x874": "iphone16-family.jpg"
