--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
 </div>
 
 <script>
-const devices = {
-    "320x568": "iphone-4.0@2x.jpg",
-    "375x667": "iphone6-8-family.jpg",
-    "414x736": "iphone6-8-plus-family.jpg",
-    "375x812": "iphoneX-12mini-family.jpg",
-    "390x844": "iphone12-14-family.jpg",
-    "430x932": "iphone-6.7@3x.jpg",
-    "393x852": "iphone14pro-family.jpg",
-    "1290x2796": "iphone-6.7-pro-max@3.jpg",
-    "402x874": "iphone16-family.jpg"
+const wallpapers = {
+  "640x1136": "wallpaper/iphone-4.0@2x.jpg",
+  "750x1334": "wallpaper/iphone-4.7@2x.jpg",
+  "1242x2208": "wallpaper/iphone-5.5@3x.jpg",
+  "1125x2436": "wallpaper/iphone-5.8@3x.jpg",
+  "828x1792": "wallpaper/iphone-6.1-old@2x.jpg", // XR / 11
+  "1242x2688": "wallpaper/iphone-6.5@3x.jpg",     // XS Max / 11 Pro Max
+  "1080x2340": "wallpaper/iphone-5.4@3x.jpg",     // 12 / 13 mini
+  "1170x2532": "wallpaper/iphone-6.1@3x.jpg",     // 12 / 13 / 14 / 15 / 16
+  "1284x2778": "wallpaper/iphone-6.7@3x.jpg",     // 12PM / 13PM / 14+ / 14PM / 15+
+  "1179x2556": "wallpaper/iphone-6.1-pro@3x.jpg", // 14 Pro / 15 Pro / 16 Pro
+  "1290x2796": "wallpaper/iphone-6.7-pro-max@3x.jpg" // 14 Pro Max / 15 Pro Max / 16 Pro Max
 };
 
 let step = 0;
