--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 
 <script>
 const wallpapers = {
-  "640x1136": "wallpaper/iphone-4.0@2x.jpg",
-  "750x1334": "wallpaper/iphone-4.7@2x.jpg",
-  "1242x2208": "wallpaper/iphone-5.5@3x.jpg",
-  "1125x2436": "wallpaper/iphone-5.8@3x.jpg",
-  "828x1792": "wallpaper/iphone-6.1-old@2x.jpg", // XR / 11
-  "1242x2688": "wallpaper/iphone-6.5@3x.jpg",     // XS Max / 11 Pro Max
-  "1080x2340": "wallpaper/iphone-5.4@3x.jpg",     // 12 / 13 mini
-  "1170x2532": "wallpaper/iphone-6.1@3x.jpg",     // 12 / 13 / 14 / 15 / 16
-  "1284x2778": "wallpaper/iphone-6.7@3x.jpg",     // 12PM / 13PM / 14+ / 14PM / 15+
-  "1179x2556": "wallpaper/iphone-6.1-pro@3x.jpg", // 14 Pro / 15 Pro / 16 Pro
-  "1290x2796": "wallpaper/iphone-6.7-pro-max@3x.jpg" // 14 Pro Max / 15 Pro Max / 16 Pro Max
+  "640x1136": "iphone-4.0@2x.jpg",
+  "750x1334": "iphone-4.7@2x.jpg",
+  "1242x2208": "iphone-5.5@3x.jpg",
+  "1125x2436": "iphone-5.8@3x.jpg",
+  "828x1792": "iphone-6.1-old@2x.jpg", // XR / 11
+  "1242x2688": "iphone-6.5@3x.jpg",     // XS Max / 11 Pro Max
+  "1080x2340": "iphone-5.4@3x.jpg",     // 12 / 13 mini
+  "1170x2532": "iphone-6.1@3x.jpg",     // 12 / 13 / 14 / 15 / 16
+  "1284x2778": "iphone-6.7@3x.jpg",     // 12PM / 13PM / 14+ / 14PM / 15+
+  "1179x2556": "iphone-6.1-pro@3x.jpg", // 14 Pro / 15 Pro / 16 Pro
+  "1290x2796": "iphone-6.7-pro-max@3x.jpg" // 14 Pro Max / 15 Pro Max / 16 Pro Max
 };
 
 let step = 0;
