--- a/index.html
+++ b/index.html
@@ -1,96 +1,80 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Wallpaper Tool</title>
+<title>Wallpaper Tool v1.0.3</title>
 <link rel="stylesheet" href="style.css">
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    const getBtn = document.getElementById("getWallpaper");
+    const copyBtn = document.getElementById("copySize");
+    const message = document.getElementById("message");
+    const preview = document.getElementById("preview");
+
+    let screenKey = null;
+    let deviceDetected = false;
+
+    const wallpapers = {
+        "640x1136": "iphone-4.0@2x.jpg",
+        "750x1334": "iphone-4.7@2x.jpg",
+        "1242x2208": "iphone-5.5@3x.jpg",
+        "1125x2436": "iphone-5.8@3x.jpg",
+        "828x1792": "iphone-6.1-old@2x.jpg",
+        "1242x2688": "iphone-6.5@3x.jpg",
+        "1080x2340": "iphone-5.4@3x.jpg",
+        "1170x2532": "iphone-6.1@3x.jpg",
+        "1284x2778": "iphone-6.7@3x.jpg",
+        "1179x2556": "iphone-6.1-pro@3x.jpg",
+        "1290x2796": "iphone-6.7-pro-max@3x.jpg"
+    };
+
+    getBtn.addEventListener("click", function() {
+        if (!deviceDetected) {
+            // Detect screen size
+            const sizeKey = `${window.screen.width * window.devicePixelRatio}x${window.screen.height * window.devicePixelRatio}`;
+            screenKey = wallpapers[sizeKey] ? wallpapers[sizeKey] : "master.jpg";
+            deviceDetected = true;
+
+            // If no match, show Copy Screen Size
+            if (screenKey === "master.jpg") {
+                copyBtn.style.display = "inline-block";
+            }
+
+            // Show preview
+            preview.src = "Wallpaper/" + screenKey;
+            preview.style.display = "block";
+            getBtn.textContent = "Download Wallpaper";
+        } else {
+            // Download
+            const link = document.createElement("a");
+            link.href = "Wallpaper/" + screenKey;
+            if (navigator.userAgent.includes("iPhone") && parseInt((navigator.userAgent.match(/OS (\d+)_/) || [])[1]) >= 11) {
+                link.download = screenKey;
+            }
+            link.target = "_blank";
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+        }
+    });
+
+    copyBtn.addEventListener("click", function() {
+        const sizeText = `${window.screen.width * window.devicePixelRatio}x${window.screen.height * window.devicePixelRatio}`;
+        navigator.clipboard.writeText(sizeText).then(() => {
+            message.textContent = "Send this to prymus";
+        });
+    });
+});
+</script>
 </head>
 <body>
 <div class="container">
-    <h1>Apple Device Wallpaper Tool</h1>
-    <img id="thumbnail" src="thumbnail-wallpaper.jpeg" alt="Wallpaper Thumbnail" class="hidden">
-    <div id="info" class="hidden"></div>
-    <button id="mainButton">Get Wallpaper</button>
-    <button id="copyButton" class="hidden">Copy Screen Size</button>
-    <div id="copyMsg" class="hidden">send this to prymus.</div>
-    <div class="version">v1.0.2b</div>
+    <h1>Wallpaper Tool</h1>
+    <button id="getWallpaper">Get Wallpaper</button>
+    <button id="copySize" style="display:none;">Copy Screen Size</button>
+    <p id="message"></p>
+    <img id="preview" style="display:none; max-width:80%; margin-top:20px;">
 </div>
-
-<script>
-const wallpapers = {
-  "640x1136": "iphone-4.0@2x.jpg",
-  "750x1334": "iphone-4.7@2x.jpg",
-  "1242x2208": "iphone-5.5@3x.jpg",
-  "1125x2436": "iphone-5.8@3x.jpg",
-  "828x1792": "iphone-6.1-old@2x.jpg", // XR / 11
-  "1242x2688": "iphone-6.5@3x.jpg",     // XS Max / 11 Pro Max
-  "1080x2340": "iphone-5.4@3x.jpg",     // 12 / 13 mini
-  "1170x2532": "iphone-6.1@3x.jpg",     // 12 / 13 / 14 / 15 / 16
-  "1284x2778": "iphone-6.7@3x.jpg",     // 12PM / 13PM / 14+ / 14PM / 15+
-  "1179x2556": "iphone-6.1-pro@3x.jpg", // 14 Pro / 15 Pro / 16 Pro
-  "1290x2796": "iphone-6.7-pro-max@3x.jpg" // 14 Pro Max / 15 Pro Max / 16 Pro Max
-};
-
-let step = 0;
-const mainButton = document.getElementById("mainButton");
-const copyButton = document.getElementById("copyButton");
-const thumbnail = document.getElementById("thumbnail");
-const info = document.getElementById("info");
-const copyMsg = document.getElementById("copyMsg");
-
-function getScreenKey() {
-    return `${window.screen.width}x${window.screen.height}`;
-}
-
-mainButton.addEventListener("click", () => {
-    if (step === 0) {
-        const key = getScreenKey();
-        thumbnail.classList.remove("hidden");
-        step = 1;
-
-        if (devices[key]) {
-            info.textContent = `Detected device family: ${key}`;
-            mainButton.textContent = "Download";
-            copyButton.classList.add("hidden");
-        } else if (/iPad/.test(navigator.userAgent)) {
-            info.textContent = "iPad support coming soon.";
-            mainButton.textContent = "Download";
-        } else if (!/iPhone|iPod/.test(navigator.userAgent)) {
-            info.textContent = "Desktop support coming soon.";
-            mainButton.textContent = "Download";
-        } else {
-            info.textContent = `Could not identify device. Screen size: ${key}`;
-            copyButton.classList.remove("hidden");
-            mainButton.textContent = "Download";
-        }
-        info.classList.remove("hidden");
-    } else if (step === 1) {
-        const key = getScreenKey();
-        let fileName = devices[key];
-        if (fileName) {
-            triggerDownload(`wallpaper/${fileName}`);
-        } else {
-            window.open("wallpaper/wallpaper-master.jpg", "_blank");
-        }
-    }
-});
-
-copyButton.addEventListener("click", () => {
-    navigator.clipboard.writeText(getScreenKey()).then(() => {
-        copyMsg.classList.remove("hidden");
-    });
-});
-
-function triggerDownload(url) {
-    const a = document.createElement("a");
-    a.href = url;
-    a.download = url.split("/").pop();
-    document.body.appendChild(a);
-    a.click();
-    document.body.removeChild(a);
-}
-</script>
 </body>
 </html>
